external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_variable.move
module a::m {
    #[spec_only]
    use prover::prover::old;

    public fun foo(): u64 {
        let x_spec = 10;
        let y = x_spec;
        y
    }
}
